[tool.poetry]
name = "tpo-notify"
version = "0.1.0"
description = ""
authors = ["Soham Waghmare <102748742+sohamw03@users.noreply.github.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
selenium = "^4.27.1"
python-dotenv = "^1.0.1"
pymongo = "^4.10.1"
resend = "^2.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
