[project]
name = "tpo-notify"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "attrs==24.2.0",
    "certifi==2024.8.30",
    "cffi==1.17.1",
    "charset-normalizer==3.4.0",
    "dnspython==2.7.0",
    "h11==0.14.0",
    "idna==3.10",
    "outcome==1.3.0.post0",
    "pycparser==2.22",
    "pymongo==4.10.1",
    "pysocks==1.7.1",
    "python-dotenv==1.0.1",
    "requests==2.32.3",
    "resend==2.4.0",
    "selenium==4.27.1",
    "sniffio==1.3.1",
    "sortedcontainers==2.4.0",
    "trio==0.27.0",
    "trio-websocket==0.11.1",
    "typing-extensions==4.12.2",
    "urllib3==2.2.3",
    "websocket-client==1.8.0",
    "wsproto==1.2.0",
]
